--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #223;
+}
+
 .App {
   text-align: center;
 }
@@ -9,8 +13,6 @@
 }
 
 .App-header {
-  background-color: #223;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
