--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,3 +34,17 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.common-header {
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  width: 100%;
+  height: 57px;
+  
+  background-color: #112;
+  
+  z-index: 999;
+}
+
