--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,15 +36,17 @@ body {
 }
 
 .common-header {
-  position: fixed;
+  position:fixed;
+  
   top:0;
-  left:0;
-  right:0;
-  width: 100%;
+  width:100%;
   height: 57px;
   
-  background-color: #112;
+  display:flex;
   
-  z-index: 999;
+  background-color: #112;
 }
 
+.header-logo::after {
+  
+}
