🧀🐙 Checkpoint ./src/styles/header-main.css:35575323/58 ./src/styles/root-vars.css:35575323/85 ./src/index.css:35575323/65 ./src/styles/header.css:35575323/26 ./src/pages/home.js:35575323/8 ./src/hooks/use-socket.jsx:35575323/8 ./src/styles/App.css:35575323/105

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,6 +26,14 @@ body {
   color: #61dafb;
 }
 
+.app-main {
+  position: absolute;
+  top: var(--header-height);
+  bottom:0;
+  left:0;
+  right:0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
