--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,9 @@ code {
 /*root vars*/
 :root {
   --header-height: 57px;
+  
+  /*palette*/
+  --background: #333;
+  --highlight: #18C;
+  --shadow: #1A170F;
 }
