👕🎄 Checkpoint ./src/styles/App.css:35575323/56 ./src/styles/header.css:35575323/92 ./src/index.css:35575323/45

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ code {
   --header-height: 57px;
   
   /*palette*/
-  --background: #333;
+  --background: #223;
   --highlight: #18C;
-  --shadow: #1A170F;
+  --header: #222;
+  --shadow: #111;
 }
