📯🌛 Checkpoint ./src/styles/header.css:35575323/59 ./src/components/top-bar.jsx:35575323/366

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,6 +6,7 @@
   height: var(--header-height);
   
   display:flex;
+  align-items: center;
   
   background-color: var(--header);
   box-shadow: 0px 2px 4px 2px var(--shadow);
