--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,11 +7,13 @@
   
   background-color: var(--header);
   box-shadow: 0px 2px 4px 2px var(--shadow);
+  text-align: center;
 }
 
 .common-header {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .header-logo h1 {
