--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,17 +7,17 @@
   
   background-color: var(--header);
   box-shadow: 0px 2px 4px 2px var(--shadow);
-  text-align: center;
 }
 
 .common-header {
   display: flex;
+  margin: 0 auto;
   align-items: center;
-  justify-content: center;
+  height: 100%;
 }
 
 .header-logo h1 {
-  margin-top:0;
+  margin: auto 0;
 }
 
 * {
