--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,6 +4,7 @@
   top:0;
   width:100%;
   height: var(--header-height);
+  overflow: hide;
   
   background-color: var(--header);
   box-shadow: 0px 2px 4px 2px var(--shadow);
@@ -21,7 +22,16 @@
 }
 
 .header-content {
+  height: 100%;
   flex-grow: 1;
+  flex-shrink: 1;
+  
+  display:flex;
+  align-items: center;
+}
+
+.header-content * {
+  margin: 0 10px;
 }
 
 .narrow {
