🌯🏯 Checkpoint ./src/components/top-bar.jsx:35575323/251 ./src/styles/header.css:35575323/355 ./src/styles/App.css:35575323/70

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -15,6 +15,7 @@
   margin: 0 auto;
   align-items: center;
   height: 100%;
+  width: calc(100% - 10px);
 }
 
 .header-logo h1 {
@@ -30,8 +31,10 @@
   align-items: center;
 }
 
-.header-content * {
+.header-content-item {
+  height: 100%;
   margin: 0 10px;
+  overflow: hide;
 }
 
 .narrow {
