🐈🐘 Checkpoint ./src/styles/header.css:35575323/112

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -15,7 +15,14 @@
   margin: 0 auto;
   align-items: center;
   height: 100%;
-  width: calc(100% - 10px);
+}
+
+.header-logo {
+  margin-left: 10px;
+}
+
+.header-profile {
+  margin-right: 10px;
 }
 
 .header-logo h1 {
