--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,17 +12,9 @@
 
 .common-header {
   display: flex;
-  margin: 0 auto;
   align-items: center;
   height: 100%;
-}
-
-.header-logo {
-  margin-left: 10px;
-}
-
-.header-profile {
-  margin-right: 10px;
+  padding: 0 10px;
 }
 
 .header-logo * {
@@ -42,10 +34,6 @@
   height: 100%;
   margin: 0 10px;
   overflow: hide;
-}
-
-.narrow {
-  max-width: 1000px;
 }
 
 * {
