✨🛫 Checkpoint ./src/pages/home.js:35575323/178 ./src/styles/home.css:35575323/94

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,7 +4,11 @@
 }
 
 .dash-section:not(:first-child) {
-  border-top: 1px solid #AAB;
+  border-top: 1px solid var(--highlight);
 }
 
 
+.bottom-logo {
+  color: grey;
+  margin-top: 5px;
+}
