👵🍐 Checkpoint ./src/styles/home.css:35575323/287 ./src/pages/home.js:35575323/268 ./src/hooks/user.jsx:35575323/21 ./src/index.css:35575323/11 ./src/styles/header.css:35575323/15

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,6 +19,15 @@
   display: inline-block;
 }
 
+.dash-box {
+  padding: 15px;
+  overflow: hidden;
+  
+  background-color: var(--shade);
+  border: 1px solid #111;
+  border-radius: 3px;
+}
+
 .cell:first-child {
   padding-left: 0;
 }
@@ -33,6 +42,10 @@
 
 .w-2-5 {
   width: 40%;
+}
+
+.w-1-2 {
+  width: 50%;
 }
 
 .dash-box {
