--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,7 @@
   height: var(--header-height);
   overflow: hide;
   
-  background-color: var(--header);
+  background-color: var(--shade);
   box-shadow: 0px 2px 4px 2px var(--shadow);
 }
 
