💆🦂 Checkpoint ./src/styles/home.css:35575323/500 ./src/styles/header.css:35575323/19 ./src/pages/home.js:35575323/274 ./src/index.css:35575323/25

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
   /*palette*/
   --background: #223;
   --highlight: #18C;
+  --shade2: #2a2a31;
   --shade: #222;
   --shadow: #1B1B1A;
 }
