--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -60,3 +60,13 @@
 .w-1-2 {
   width: 50%;
 }
+
+/*Name entry*/
+.name-entry-form {
+  
+}
+
+.name-entry-form input[type='text'] {
+  border: none;
+  border-radius: 3px;
+}
