--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -66,7 +66,12 @@
   
 }
 
-.name-entry-form input[type='text'] {
+.name-entry-form input[type='text'], .name-entry-form input[type='text']:focus-visible {
   border: none;
-  border-radius: 3px;
+  outline: none;
+  background: none;
+  color: white;
+  
+  border-bottom: 1px solid grey;
+  margin: 0 3px;
 }
