--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -74,6 +74,7 @@
   
   border-bottom: 1px solid grey;
   margin: 0 3px;
+  font-size: 17px;
 }
 
 .name-entry-form input[type='submit'] {
@@ -82,6 +83,8 @@
   border: 1px solid darkgreen;
   border-radius: 2px;
   font-weight: bold;
+  font-size: 20px;
+  padding: 3px 15px; 
 }
 
 .name-entry-form input[type='submit']:hover {
