🌻👁 Checkpoint ./src/pages/home.js:35575323/459 ./src/index.css:35575323/28 ./src/styles/home.css:35575323/294

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -78,18 +78,22 @@
 }
 
 .name-entry-form input[type='submit'] {
-  background: green;
+  background: var(--highlight);
   color: white;
-  border: 1px solid darkgreen;
-  border-radius: 2px;
+  border: 3px solid var(--highlight2);
+  border-radius: 4px;
   font-weight: bold;
   font-size: 20px;
   padding: 3px 15px; 
+  box-shadow: inset 0px -4px 0 rgb(0 0 0 / 20%);
 }
 
 .name-entry-form input[type='submit']:hover {
-  background: forestgreen;
-  color: white;
+  background: var(--highlight2);
+}
+
+.name-entry-form input[type='submit']:active {
+  background: var(--highlight);
 }
 
 .header-profile {
