--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
   /*palette*/
   --background: #223;
   --highlight: #18C;
+  --highlight2: #29D;
   --shade2: #2a2a31;
   --shade: #222;
   --shadow: #1B1B1A;
