--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -66,7 +66,7 @@
   
 }
 
-.name-entry-form input[type='text'], .name-entry-form input[type='text']:focus-visible {
+.transparent-input, .transparent-input:focus-visible {
   border: none;
   outline: none;
   background: none;
@@ -83,8 +83,8 @@
   border: 2px solid var(--highlight2);
   border-radius: 4px;
   font-weight: bold;
-  font-size: 20px;
-  padding: 3px 15px; 
+  font-size: 16px;
+  padding: 3px 7px; 
   box-shadow: inset 0px -2px rgb(0 0 0 / 10%);
 }
 
