📈💐 Checkpoint ./src/styles/App.css:35575323/68 ./src/pages/home.js:35575323/100 ./src/styles/home.css:35575323/180

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,12 @@ body {
   color: white;
 }
 
+a {
+  color: inherit;
+  border: none;
+  text-decoration: none;
+}
+
 .App {
   text-align: center;
 }
