🏙🗃 Checkpoint ./src/styles/home.css:35575323/81 ./src/styles/App.css:35575323/64

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,12 @@
   display: block;
 }
 
+.dash-section::after {
+  content: '';
+  clear:both;
+  display: block;
+}
+
 .dash-section:not(:first-child) {
   border-top: 1px solid var(--highlight);
 }
