🌲⚽️ Checkpoint ./src/styles/home.css:35575323/31 ./src/pages/home.js:35575323/151 ./src/styles/App.css:35575323/66

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -113,13 +113,17 @@
 }
 
 /*Server list stuff*/
-.dashboard-list * {
+.dashboard-list a {
   text-align: left;
   display: block;
   overflow: hidden;
   padding: 7px;
 }
 
-.dashboard-list *:hover {
+.dashboard-list a:hover {
   background-color: var(--background);
+}
+
+.muted {
+  color: grey;
 }
