--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,6 +6,7 @@
   height: var(--header-height);
   overflow: hide;
   
+  
   background-color: var(--shade);
   box-shadow: 0px 2px 4px 2px var(--shadow);
   
@@ -17,6 +18,8 @@
   align-items: center;
   height: 100%;
   padding: 0 10px;
+  
+  transition: max-width 0.5s;
 }
 
 .header-logo * {
