--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,7 +19,11 @@
   height: 100%;
   padding: 0 10px;
   
-  transition: max-width 0.5s;
+  transition: width 0.5s;
+}
+
+.common-header[narrowOff='1'] {
+  max-width: none;
 }
 
 .header-logo * {
