--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,6 +11,11 @@
   box-shadow: 0px 2px 4px 2px var(--shadow);
   
   z-index: 999;
+  transition: max-width 0.5s;
+}
+
+.narrow-override {
+  max-width: 100%;
 }
 
 .common-header {
