--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -6,11 +6,24 @@
   width: 225px;
   background-color: var(--shade2);
   outline: auto;
+  overflow: hidden;
   
   display: flex;
-  padding: 5px;
 }
 
 .player-list {
+  width: 100%;
+  padding: 5px;
   
+  overflow: scroll;
+}
+
+.player-entry {
+  padding: 5px;
+  border: 1px solid grey;
+  border-radius: 3px;
+}
+
+.player-entry:not(:first-child) {
+  margin-top: 10px;
 }
