--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -16,7 +16,28 @@
   width: 100%;
   padding: 5px;
   
-  overflow: scroll;
+  overflow: auto;
+}
+
+/** Scroll bar **/
+/* width */
+.player-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.player-list::-webkit-scrollbar-track {
+  background: var(--shade2) 
+}
+ 
+/* Handle */
+.player-list::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+.player-list::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 
 .player-entry:nth-child(odd) {
