👲🚞 Checkpoint ./src/styles/game.css:35575323/1573 ./src/components/game/player-list.jsx:35575323/189

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -32,12 +32,12 @@
  
 /* Handle */
 .player-list::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: var(--highlight2); 
 }
 
 /* Handle on hover */
 .player-list::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: var(--highlight); 
 }
 
 .player-entry:nth-child(odd) {
