✍️⏰ Checkpoint ./src/components/game/player-list.jsx:35575323/103 ./src/styles/game.css:35575323/78

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -53,6 +53,15 @@
   padding-top: 10px;
 }
 
+.player-info {
+  padding-left: 5px;
+  display: inline-block;
+}
+
+.rank {
+  
+}
+
 .avatar {
   height: 40px;
   width: 40px;
