--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -46,6 +46,10 @@
   padding: 5px;
 }
 
+.this-user {
+  background: var(--highlight2)
+}
+
 .user-entry:not(:first-child) {
   padding-top: 10px;
   border-top: 1px solid #444;
