💈💘 Checkpoint ./src/styles/game.css:35575323/267 ./src/index.css:35575323/87

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -47,7 +47,8 @@
 }
 
 .this-user {
-  background: var(--highlight2)
+  background: var(--highlight3);
+  border-radius: 3px;
 }
 
 .user-entry:not(:first-child) {
