--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
   --background: #223;
   --highlight: #18C;
   --highlight2: #29D;
+  --highlight3: #202540;
   --shade2: #2a2a31;
   --shade: #222;
   --shadow: #1B1B1A;
