--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -51,6 +51,11 @@
   border-radius: 3px;
 }
 
+.host-user {
+  background: #221;
+  border-radius: 3px;
+}
+
 .user-entry:not(:first-child) {
   padding-top: 10px;
   border-top: 1px solid #444;
