🍪🐗 Checkpoint ./src/styles/game.css:35575323/1173 ./src/components/game/chat.jsx:35575323/7 ./src/components/game/middle-content.jsx:35575323/19

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -86,22 +86,25 @@
   bottom:0;
   left: 225px;
   right:0;
+  
+  display: flex;
 }
 
 /* Chat */
+.chat {
+  width: 100%;
+  outline: auto;
+}
 
-/
 .message-entry {
   background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
-  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   display: flex;
   height: 3rem;
   box-sizing: border-box;
-  backdrop-filter: blur(10px);
 }
 
 .message {
