--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -88,6 +88,7 @@
   right:0;
   
   display: flex;
+  flex-direction: column;
 }
 
 /* Chat */
@@ -134,6 +135,8 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  flex-grow: 1;
+  height: 1px;
 }
 
 .message-list > li {
