--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -9,6 +9,7 @@
   overflow: hidden;
 
   display: flex;
+  flex-direction: column;
 
   box-shadow: 2px 0px 4px 2px var(--shadow);
 }
@@ -75,6 +76,7 @@
 .avatar {
   height: 40px;
   width: 40px;
+  
   border-radius: 3px;
   overflow: hidden;
 }
@@ -89,6 +91,7 @@
   
   display: flex;
   flex-direction: column;
+  outline:auto;
 }
 
 /* Chat */
@@ -135,8 +138,8 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  flex-grow: 1;
-  height: 1px;
+  flex: 1 1;
+  height: 100px;
 }
 
 .message-list > li {
