--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -147,7 +147,8 @@
 }
 
 /*Border between messges*/
-.message-list > li:not(:first-child)::after {
+.message-list > li:not(:first-child)::before {
+  content: '';
   display: block;
   border-top: 1px solid var(--highlight);
   width: 80%;
