🌟😺 Checkpoint ./src/styles/game.css:35575323/224 ./src/components/game/user-list.jsx:35575323/289 ./src/components/game/avatar.jsx:35575323/284 ./src/components/game/chat.jsx:35575323/70

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -140,17 +140,9 @@
   padding: 0;
   flex-grow: 1;
   width: 100%;
+  background: var(--shade)
 }
 
-.message-list > li {
+.message-list > .message {
   padding: 0.5rem 1rem;
-}
-
-/*Border between messges*/
-.message-list > li:not(:first-child)::before {
-  content: '';
-  position: absolute;
-  border-bottom: 1px solid var(--highlight);
-  width: 80%;
-  left: 10%;
 }
