🎹💓 Checkpoint ./src/components/game/chat.jsx:35575323/110 ./src/styles/game.css:35575323/425

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -142,14 +142,18 @@
   background: var(--shade)
 }
 
-.message-list > .message {
+/* Messages */
+.message {
   padding: 0.5rem 1rem;
+  text-align: left;
 }
 
-.message-containter {
+.message-container {
   display: inline-block;
-  width: 100px;
+  width: auto;
 }
+
+.message
 
 * {
   outline: auto;
