--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -149,11 +149,16 @@
 }
 
 .message-container {
-  display: inline-block;
+  display: block;
   width: auto;
+  height: 50px;
 }
 
-.message
+.message-author {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
 
 * {
   outline: auto;
