🏈👗 Checkpoint ./src/components/game/avatar.jsx:35575323/45 ./src/styles/game.css:35575323/243

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -148,10 +148,15 @@
   text-align: left;
 }
 
-.message-container {
-  display: block;
-  width: auto;
+.message > .avatar {
   height: 50px;
+}
+
+.message-container {
+  position: relative;
+  display: inline-block;
+  height: 100%;
+  width: calc(100% - 50px)
 }
 
 .message-author {
