--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -45,6 +45,7 @@
   background: var(--highlight);
 }
 
+/* Individual Users */
 .user-entry {
   text-align: left;
   padding: 5px;
@@ -143,7 +144,7 @@
 }
 
 .message-list {
-  
+  height: 100%;
 }
 
 /* Messages */
