--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -91,14 +91,12 @@
   
   display: flex;
   flex-direction: column;
-  outline:auto;
 }
 
 /* Chat */
 .chat {
   width: 100%;
   height: 100%;
-  outline: auto;
   display: flex;
   flex-direction: column;
 }
@@ -110,6 +108,7 @@
   right: 0;
   display: flex;
   height: 3rem;
+  flex-shrink: 0;
 }
 
 .message-entry > input {
@@ -140,7 +139,8 @@
   padding: 0;
   flex-grow: 1;
   width: 100%;
-  background: var(--shade)
+  background: var(--shade);
+  overflow: auto;
 }
 
 .message-list {
